Fixing the check for active Internet connection and the WebPage activity (a problem with orientation changes).